--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: make install
-        run: name install
+        run: make install
       - name: lint
         run: make lint
 
