--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,14 +4,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+
     strategy:
       # Node versions list
       matrix:
         node-version: [14.x]
 
     steps:
-      - name: make install
-        run: make install
-      - name: lint
-        run: make lint
-
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: npm install
+        run: |
+          make install
